[package]
name = "petompp-web-models"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = { version = "0.4", features = ["serde"] }
deref-derive = "0.1"
regex = "1.9"
serde = { version = "1.0", features = ["derive"] }
strum = { version = "0.25", features = ["derive"] }
timeago = { version = "0.4", optional = true }
web-sys = { version = "0.3", optional = true, features = ["Window", "Navigator"] }

