[package]
name = "petompp-web-models"
version = "0.4.7"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
azure_core = { version = "0.16", optional = true }
azure_storage = { version = "0.16", optional = true }
azure_storage_blobs = { version = "0.16", optional = true }
base64 = {version = "0.21", optional = true}
chrono = { version = "0.4.31", features = ["serde"] }
deref-derive = "0.1"
diesel = { version = "2.0.0", optional = true }
jwt = { version = "0.16", optional = true }
r2d2 = { version = "0.8", optional = true }
regex = "1.9"
rocket = { version = "0.5.0-rc.3", optional = true, features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
strum = { version = "0.25", features = ["derive"] }
timeago = { version = "0.4", optional = true }
web-sys = { version = "0.3", optional = true, features = ["Window", "Navigator"] }

[features]
azure = ["azure_core", "azure_storage", "azure_storage_blobs", "base64"]
api-errors = ["azure", "diesel", "jwt", "r2d2", "rocket"]
