[package]
name = "petompp-web-models"
version = "0.7.2"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
azure_core = { version = "0.16", optional = true }
azure_storage = { version = "0.16", optional = true }
azure_storage_blobs = { version = "0.16", optional = true }
base64 = {version = "0.21", optional = true}
chrono = { version = "0.4.31", features = ["serde"] }
deref-derive = "0.1"
diesel = { version = "2.0.0", optional = true }
jwt = { version = "0.16", optional = true }
r2d2 = { version = "0.8", optional = true }
regex = "1.9"
rocket = { version = "0.5.0-rc.3", optional = true, features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
strum = { version = "0.25", features = ["derive"] }
timeago = { version = "0.4", optional = true }
web-sys = { version = "0.3", optional = true, features = ["Window", "Navigator", "FormData", "File", "Blob"] }
js-sys = { version = "0.3", optional = true }
wasm-bindgen-futures = { version = "0.4" , optional = true }
wasm-bindgen = { version = "0.2" , optional = true }

[features]
azure = ["azure_core", "azure_storage", "azure_storage_blobs", "base64"]
api-errors = ["azure", "diesel", "jwt", "r2d2", "rocket"]
wasm = ["wasm-bindgen", "wasm-bindgen-futures", "web-sys", "js-sys"]
